--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p id="question">How to make an order?</p>
                 <p>To place an order, you need to decide on the killer and send an application by mail. The application
                     must
-                    contain a description of the victim: her habits, place of residence or work, appearance.</p>
+                    contain a description of the victim: her habits, place of residence or work, appearance. You will be connected to the killer.</p>
                 <p id="mail">themurderorder@mail.ru</p>
             </div>
         </div>
